--- a/index.html
+++ b/index.html
@@ -21,17 +21,25 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
+
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#marcas">Marcas</a>
+                    <a class="nav-link" href="#">Hannabach</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Features</a>
+                    <a class="nav-link" href="#">Knobloch</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link ">Savarez</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
+                    <a class="nav-link ">d´Addario</a>
+                  <li class="nav-item">
+                    <a class="nav-link ">Augustine</a>
+                  <li class="nav-item">
+                      <a class="nav-link ">Sonatina</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link ">Accesorios</a>
                   </li>
                 </ul>
               </div>
@@ -49,28 +57,50 @@ interactivo</h2></pre>
                 <img id="dedo" src="assets/tap.png" class="img-fluid" alt="touch">
             </div>
         </div>
-        <div id="marcas">
+        <section id="marcas">
             <div>
-                <img class="marca" src="assets/l-marcas/hannabach.png"  alt="hanabach">
+              <a class="m" href="">
+                <img class="marca" src="assets/marcas/hannabach.png"  alt="hanabach">
+                <h4>HANNABACH</h4>
+              </a>
+            </div>
+            <div> 
+              <a class="m" href="">
+                <img class="marca" src="assets/marcas/knobloch.png"  alt="knobloch">
+                <h4>KNOBLOCH</h4>
+              </a>
             </div>
             <div>
-                <img class="marca" src="assets/l-marcas/knobloch.png"  alt="knobloch">
+              <a class="m" href="">
+                <img class="marca" src="assets/marcas/savarez.png"  alt="savarez">
+                <h4>SAVAREZ</h4>
+              </a>
             </div>
             <div>
-                <img class="marca" src="assets/l-marcas/savarez.png"  alt="touch">
+              <a class="m" href="">
+                <img class="marca" src="assets/marcas/d´addario.png"  alt="d´addario">
+                <h4>D´ADDARIO</h4>
+              </a>
+            </div>
+            <div >
+              <a class="m" href="">
+                <img class="marca" src="assets/marcas/augustine.png"  alt="augustine">
+                <h4>AUGUSTINE</h4>
+              </a>
             </div>
             <div>
-                <img class="marca" src="assets/l-marcas/d´addario.png"  alt="d´addario">
+              <a class="m" href="">
+                <img class="marca" src="assets/marcas/sonatina.png"  alt="sonatina">
+                <h4>SONATINA</h4>
+              </a>
             </div>
-            <div>
-                <img class="marca" src="assets/l-marcas/augustine.png"  alt="augustine">
-            </div>
-            <div>
-                <img class="marca" src="assets/l-marcas/sonatina.png"  alt="sonatina">
-            </div>
-
-
-        </div>
+        </section>
+        <section id="acc">
+          <a class="a" href="">
+            <img id="accesorios" src="./assets/accesorios/accesorios.png" alt="accesorios">
+            <h4>ACCESORIOS</h4>
+          </a>
+        </section>
     </main>
     <footer>
 
