--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
                     <a class="no navbar-brand" href="index.html">
                       <img src="./assets/icono.png" alt="icono" width="60" height="60">
                     </a>
-              <a class="navbar-brand" href="index.html">La Casa Del Guitarrista México</a>
+              <a id="in" class="navbar-brand" href="index.html"">La Casa Del Guitarrista México</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-
                   <li class="nav-item">
                     <a class="nav-link" href="#1">Hannabach</a>
                   </li>
